# hpss-project

./: pyproject.toml
evaluation/: 1_experiment_eval.csv  2_experiment_eval.csv  3_experiment_eval.csv  4_experiment_eval.csv
research/: 01032026_initial_tests.py  10032026_eval.py  11032026_eval_exp_2.py  12032026_eval_exp_3.py  12032026_eval_exp_4.py
scripts/: 1_magnitude_only_optimization.py  2_mag_only_explicit_p.py  3_group_sparsity_for_percussion.py  4_robust_pca.py  magnitude_only_optimization.py  run_all_audio_variants.py
