[project]
name = "hpss-project"
version = "0.1.0"
description = "Harmonic-Percussive Source Separation with Convex Optimization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "ipdb>=0.13.13",
    "ipykernel>=6.30.1",
    "ipython>=9.5.0",
    "isort>=6.0.1",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "python-dotenv>=1.1.1",
]